# bezier

./: .appveyor.yml  .clang-format  .coveragerc  .dockerignore  .f2py_f2cmap  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.rst  DEVELOPMENT.rst.template  MANIFEST.in  Makefile  README.md  README.rst  README.rst.release.template  README.rst.template  README.templates.json  RELEASE_README.rst.template  circle.yml  clipping_in_action.py  codemeta.json  galerkin_projection.py  investigate.py  nox.py  noxfile.py  paper.bib  paper.md  pylintrc  pyproject.toml  setup.py  setup_helpers.py  setup_helpers_macos.py  setup_helpers_osx.py  setup_helpers_windows.py  tox.ini
.circleci/: config.yml  expected_journal.txt
.github/: dependabot.yaml
0.0.1/: README.md
0.1.0/: README.md
0.1.1/: README.md
0.10.0/: 1.0.1147.master-3x9qxt36p9px5xl5.txt  1.0.1147.master-59y12m1x0orjqo89.txt  1.0.1147.master-7ljts8c85rvjxx5i.txt  1.0.1147.master-buvf8xsaiuy380ju.txt  1.0.1147.master-gdhubo9vtvjuide6.txt  1.0.1147.master-k7mhfrbxcg5xs6pl.txt  1.0.1147.master-uo969cn2gn6fkxux.txt  1479-00.txt  1479-01.txt  1479-02.txt  1479-03.txt  1479-04.txt  1479-05.txt  1479-06.txt  1479-07.txt  1479-08.txt  1479-09.txt  1479-10.txt  1479-11.txt  1479-12.txt  1479-13.txt  671.1-571656948.txt  671.2-571656949.txt  README.md
0.11.0/: 1.0.1269.master-124axf4hyhn9ghd8.txt  1.0.1269.master-3xkhknuswrq6mydb.txt  1.0.1269.master-bwxuf6afw017mw9a.txt  1.0.1269.master-c6xfnjfqxeiocx9y.txt  1.0.1269.master-c8ulq9xf6tw35x23.txt  1.0.1269.master-e2y53ec97un99k6i.txt  1.0.1269.master-hscrxnqqha8lrekc.txt  1.0.1269.master-lg471nidpa8sl220.txt  1.0.1269.master-xjq4k3vxnr9q8qqb.txt  1588-00.txt  1588-01.txt  1588-03.txt  1588-04.txt  1588-05.txt  1588-06.txt  1588-07.txt  1588-08.txt  1588-09.txt  1588-10.txt  1588-11.txt  1588-13.txt  1588-14.txt  784.1-635799582.txt  784.2-635799583.txt  784.3-635799584.txt  README.md
0.2.0/: README.md
0.2.1/: README.md
0.3.0/: 1.0.54.master-1cwo8mk0u3w8s6ub.txt  1.0.54.master-2l4m3smre0xpoarm.txt  1.0.54.master-35cjrlpbwicop266.txt  1.0.54.master-7yu9in1n1l7nqd6d.txt  1.0.54.master-9cb5ay6x1kwddkeh.txt  1.0.54.master-g14ut3aavk81f1u5.txt  1.0.54.master-lm74avs2bkrc979x.txt  1.0.54.master-qtm245qf9eqy74c9.txt  README.md
0.4.0/: 1.0.225.master-0bujris4fx80wd1e.txt  1.0.225.master-3bnvrvp8d65htua3.txt  1.0.225.master-6v92c8528xc1fa9s.txt  1.0.225.master-afh95yg2rgc2nw6q.txt  1.0.225.master-edb0vmxs4kg42ok8.txt  1.0.225.master-i1fst2yl4oeo24vc.txt  1.0.225.master-neq7aj86yvsan0wp.txt  1.0.225.master-qvb5r6eappti0jqi.txt  README.md
0.5.0/: 1.0.430.master.38i27sxbu9fqg7y0.txt  1.0.430.master.7rcutiv3uxwgego4.txt  1.0.430.master.g4erawi3qttytqck.txt  1.0.430.master.kgp1wn1d8g5xqd5v.txt  1.0.430.master.l1co3sx6rnontypb.txt  1.0.430.master.r5i5qu0jq8s519je.txt  1.0.430.master.ydfy7873t6mm41ax.txt  1.0.430.master.yggn5t7vyf5m7tc3.txt  README.md
0.6.0/: 1.0.815.master-015hmxdgtfd5paaq.txt  1.0.815.master-07tgsjik5gb1bqu9.txt  1.0.815.master-fv5g95glhebl230f.txt  1.0.815.master-jx2j3tff075a19yy.txt  1.0.815.master-mqwhragk5eytu6rj.txt  1.0.815.master-rccmq3d0n3i4ud5s.txt  1.0.815.master-uey1ubnjvvgxlqfk.txt  1.0.815.master-wq5agn3pumyp5xc3.txt  1.0.815.master-xal7t7eufugt7pxt.txt  351.1-327103322.txt  351.2-327103324.txt  351.3-327103325.txt  README.md
0.6.1/: 1.0.815.master-549r1mc0w7qcosqu.txt  1.0.815.master-75xqwxquiiom3o66.txt  1.0.815.master-afpdo5tss23c514w.txt  1.0.815.master-b60gheovlmbpkfxx.txt  1.0.815.master-q1rbxixfyynxvupe.txt  1.0.815.master-tt0gtgjq487yqmkl.txt  1.0.815.master-ufky29fjc0ml0hti.txt  1.0.829.master-k2kxb40wug7a2wvi.txt  1.0.829.master-ukb1dxxsid47eu5k.txt  366.1-328282142.txt  366.2-328282143.txt  366.3-328282145.txt  README.md
0.6.2/: 1.0.838.master-084kwnrgdiau34xc.txt  1.0.838.master-3qae1u27vd779dtc.txt  1.0.838.master-4eqa06y4d34x523v.txt  1.0.838.master-db7wcsy132094xli.txt  1.0.838.master-g0de1qtg96pib0sf.txt  1.0.838.master-pifjxs39q7okmyri.txt  1.0.838.master-ptv2qidniqse405u.txt  1.0.838.master-vfw28edxd1tsuuf7.txt  1.0.838.master-wfobrbffwjxqk7vc.txt  374.1-332420782.txt  374.2-332420783.txt  374.3-332420784.txt  README.md
0.6.3/: 1.0.850.master-6k1c9vsurxaots1g.txt  1.0.850.master-91ltwylcw8m12bv1.txt  1.0.850.master-b1c6u3hcmt3sk1mq.txt  1.0.850.master-fyn80jvh2y4n0d1d.txt  1.0.850.master-icqgikdmkk155ur3.txt  1.0.850.master-ke8v4i0ss0y8hl80.txt  1.0.850.master-naucmhi3oc5b5i6g.txt  1.0.850.master-uo84ionotfs83h17.txt  1.0.850.master-yjxbxpi01jai6x6g.txt  381.2-333486318.txt  382.1-333486317.txt  382.3-333486320.txt  README.md
0.6.4/: 1.0.855.master-11kny0mmil7p1s45.txt  1.0.855.master-6oarrw4esfnjilir.txt  1.0.855.master-aqr7tajv3t93v47s.txt  1.0.855.master-fa17p7979ys3fklc.txt  1.0.855.master-hmhuh415cb9pdaja.txt  1.0.855.master-i7699158285o8naj.txt  1.0.855.master-l36w62u0x24gk640.txt  1.0.855.master-l5gyv1ce4v6mf0rn.txt  1.0.855.master-lnc8vv755sw7u9cd.txt  386.1-334046106.txt  386.2-334046107.txt  386.3-334046108.txt  README.md
0.7.0/: 1.0.879.master-25t4jexfqhhpk2w9.txt  1.0.879.master-aqjqysf062mv98mg.txt  1.0.879.master-do2wa0y5eg12k13v.txt  1.0.879.master-ers3esck9gqnkij3.txt  1.0.879.master-k2tf66vodo3ildpx.txt  1.0.879.master-q7vpjoij7png7q37.txt  1.0.879.master-qqh4rf12c5kqsmuc.txt  1.0.879.master-r8s99iykay1vk1gu.txt  1.0.879.master-ri39sog1pt0w0gg4.txt  411.1-338366517.txt  411.2-338366518.txt  411.3-338366519.txt  README.md
0.8.0/: 1.0.938.master-11ta9m7gaprs46me.txt  469.1-355482900.txt  README.md  (+10 more)
src/fortran/: CMakeLists.txt  curve.f90  curve_intersection.f90  helpers.f90  quadpack.f90  quadpack_double.f90  status.f90  surface.f90  surface_intersection.f90  triangle.f90  triangle_intersection.f90
src/fortran/cmake/: VersionInfo.in  VersionResource.rc  generate_product_version.cmake
src/fortran/include/: bezier.h  bezier.hpp
src/fortran/include/bezier/: curve.h  curve.hpp  curve_intersection.h  helpers.h  helpers.hpp  surface.h  surface_intersection.h  triangle.h  triangle_intersection.h
src/fortran/quadpack/: CMakeLists.txt  dqagse.f  dqelg.f  dqk21.f
(+585 files in other folders)
